interface, SQL 수정

--- a/WebContent/community/notice/detail.html
+++ b/WebContent/community/notice/detail.html
@@ -54,7 +54,7 @@
                         <h1 class="d-none">작성 정보</h1>
                         <ul>
                             <li class="id">글번호 : </li>
-                            <li class="admin-user-id">작성자 : </li>
+                            <li class="user-id">작성자 : </li>
                             <li class="reg-date">작성일 : </li>
                             <li class="hit">조회수 : </li>
                         </ul>
