--- a/WebContent/knowhow/list.html
+++ b/WebContent/knowhow/list.html
@@ -56,7 +56,7 @@
                             <button class="font">강아지</button>
                             <button class="font">고양이</button>
                         </section>
-                        <section class="category-btn">
+<!--                         <section class="category-btn">
                         	<select>
                         	    <option>카테고리 선택</option>
                         		<option>건강</option>
@@ -66,7 +66,7 @@
 	                      		<option>놀이</option>
 	                      		<option>의료</option>
                         	</select>
-                        </section>
+                        </section> -->
                         <section class="knowhow-upload-btn">
                             <h1 class="d-none">노하우 게시글 등록</h1>
                             <a href="upload.html"><button class="font">노하우 등록하기</button></a>
