--- a/WebContent/pet-management/schedule/calendar.html
+++ b/WebContent/pet-management/schedule/calendar.html
@@ -88,7 +88,8 @@
                         <div class="popup-wrapper d-none">
                             <div class="add-schedule">
                                 <div class="close-btn">
-                                    <img src="../images/icon-close-btn.png" alt="">
+                                <img src="../../images/icon-close-btn.png" alt="">
+                                    
                                 </div>
                                 <div class="add-schedule-form">
     
