NoticeDetail, Notice_view 수정

--- a/WebContent/community/notice/detail.html
+++ b/WebContent/community/notice/detail.html
@@ -71,11 +71,11 @@
                         <h1 class="d-none">상세 페이저</h1>
                         <div class="up-article-pager">
                             <span>▲ 다음글</span>
-                            <div><a href="">다음글 제목</a></div>
+                            <div><a href=""><!-- 다음글 제목 --></a></div>
                         </div>
                         <div class="down-article-pager">
                             <span>▼ 이전글</span>
-                            <div>이전글이 없습니다.</div>
+                            <div><!-- 이전글이 없습니다. --></div>
                         </div>
                     </nav>
                     <nav class="article-button">
