--- a/WebContent/community/notice/detail.html
+++ b/WebContent/community/notice/detail.html
@@ -69,20 +69,14 @@
                     </article>
                     <nav class="article-pager">
                         <h1 class="d-none">상세 페이저</h1>
-                        <div class="up-article-pager">
-                            <span>▲ 다음글</span>
-                            <div><a href=""><!-- 다음글 제목 --></a></div>
-                        </div>
-                        <div class="down-article-pager">
-                            <span>▼ 이전글</span>
-                            <div><!-- 이전글이 없습니다. --></div>
-                        </div>
+                        <div class="up-article-pager"></div>
+                        <div class="down-article-pager"></div>
                     </nav>
                     <nav class="article-button">
                         <h1 class="d-none">공지사항 버튼</h1>
                         <button class="create-btn button-2"><a href="./create.html">등록</a></button>
                         <button class="update-btn button-2"><a href="./update.html">수정</a></button>
-                        <button class="delete-btn button-2"><a href="./list.html">삭제</a></button>
+                        <button class="delete-btn button-2">삭제</button>
                         <button class="list-btn button-2"><a href="./list.html">목록</a></button>
                     </nav>
                 </main>
