Update knowhow list

--- a/WebContent/community/knowhow/list.html
+++ b/WebContent/community/knowhow/list.html
@@ -17,7 +17,7 @@
             <div class="float-content">
                 <div class="flex align-center">
                     <a href="" class="logo-title-container">
-                        <img src="../images/logo.png">
+                        <img src="../../../images/logo.png">
                     </a>
                     <nav class="main-menu">   
                             <h1 class="d-none">메인메뉴</h1>
@@ -52,6 +52,7 @@
                 </aside>
                 <main id="main">
                     <section>
+                    	<h1 class="d-none">반려동물 선택</h1>
                         <section class="pet-selecting-btn">
                             <button class="font">강아지</button>
                             <button class="font">고양이</button>
@@ -69,40 +70,42 @@
                         </section> -->
                         <section class="knowhow-upload-btn">
                             <h1 class="d-none">노하우 게시글 등록</h1>
-                            <a href="upload.html"><button class="font">노하우 등록하기</button></a>
+                            <a href="reg.html"><button class="font">노하우 등록하기</button></a>
                         </section>
                     </section>
                     <div class="knowhow-list">
                         <h1 class="d-none">노하우 게시글 목록</h1>
-                        <!-- 
-                        1. KnowhowService 생성 //
+                         <!-- 
+                        1. Knowhow 클래스 생성 
+                        2. KnowhowService 인터페이스 생성 
+                        	- 필요한 함수 목록 정의
+                        3. KnowhowService 인터페이스를 JDBCKnowhowService에서 구현
                         	- DB와 연동시켜 데이터 가져오기 
-                        2. Knowhow 클래스 생성 //
-                        3. KnowhowList 생성 //
-                        	- 화면에 출력할 데이터를 얻는 곳
+                        4. KnowhowList
+                        	- JDBCKnowhowService를 통해 필요한 데이터 가져오기
                         4. list.js
-                        	- KnowhowList에서 데이터를 얻어와 화면에 출력하는 로직 짜기
+                        	- 가져온 데이터를 화면에 출력하는 로직 짜기
                         -->
                         
                         <!-- <div>
                             <div class="img-area">
                                 <a href="detail.html">
-                                <img class="img-pet" src="../images/cat-pill.jpg">
+                                <img class="img-pet" src="../../images/cat-pill.jpg">
                                 </a>
                             </div>
                             <div class="text-area">
                             	<div class="knowhow-info">
                             		<ul>
                             			<li>
-                            				<img src="../images/view.png">
+                            				<img src="../../images/view.png">
                             				<span>26</span>
                             			</li>
                             			<li>
-                            				<img src="../images/heart.png">
+                            				<img src="../../images/heart.png">
                             				<span>7</span>
                             			</li>
                             			<li>
-                            				<img src="../images/comment.png">
+                            				<img src="../../images/comment.png">
                             				<span>3</span>
                             			</li>
                             		</ul>
@@ -117,14 +120,14 @@
                     </div>
                     <nav class="pager">
                         <h1 class="d-none">페이저</h1>
-                        <a href=""><img class="prev" src="../images/left-arrow.png" alt=""></a>
+                        <a href=""><img class="prev" src="../../images/left-arrow.png" alt=""></a>
                         <ul>
                             <li><a href="">1</a></li>
                             <li><a href="">2</a></li>
                             <li><a href="">3</a></li>
                             <li><a href="">4</a></li>
                         </ul>
-                        <a href=""><img class="next" src="../images/right-arrow.png" alt=""></a>
+                        <a href=""><img class="next" src="../../images/right-arrow.png" alt=""></a>
                     </nav>
                 </main>
             </div>
