--- a/WebContent/myhome/list.html
+++ b/WebContent/myhome/list.html
@@ -44,14 +44,14 @@
                     <section>
                         <section class="member-info">
                             <h1 class="d-none">회원 정보</h1>
-                            <div class="img-member"></div>
+                            <!-- <div class="img-member"></div>
                             <span class="id">id1</span>
                             <div class="friend-info">
                                 <span class="follower font">팔로워</span> 
                                 <span class="follower-num font">20</span>
                                 <span class="follow font">팔로우</span> 
                                 <span class="follow-num font">10</span>
-                            </div>
+                            </div> -->
                         </section>
             
                         <section class="diary-upload-btn">
@@ -61,7 +61,18 @@
                     </section>
                     <div class="diary-list">
                         <h1 class="d-none">동물 일기 목록</h1>
-                        <div>
+                        <!-- 
+                        1. Diary 클래스 생성 
+                        2. MyhomeService 인터페이스 생성 
+                        	- 필요한 함수 목록 정의
+                        3. MyhomeService 인터페이스를 JDBCMyhomeService에서 구현
+                        	- DB와 연동시켜 데이터 가져오기 
+                        4. MyhomeList
+                        	- JDBCMyhomeService를 통해 데이터를 얻어오기
+                        5. list.js
+                        	- 가져온 데이터를 이용해 화면에 출력하는 로직 짜기
+                        -->
+                        <!-- <div>
                             <div class="img-area">
                                 <img class="img-pet" src="../images/puppy1.jpg">
                             </div>
@@ -168,8 +179,20 @@
                                     <span>#토끼모자</span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
+                    <nav class="pager">
+                        <h1 class="d-none">현재 페이지 정보</h1>
+                        <a href=""><img class="prev" src="../../images/left-arrow.png" alt=""></a>
+                        <ul>
+                        	<li><a class="text-strong" href="">1</a></li>
+                        	<li><a href="">2</a></li>
+                        	<li><a href="">3</a></li>
+                        	<li><a href="">4</a></li>
+                        	<li><a href="">5</a></li>
+                        </ul>
+                        <a href=""><img class="next" src="../../images/right-arrow.png" alt=""></a>
+                    </nav>
                 </main>
             </div>
         </div>
