--- a/WebContent/community/notice/detail.html
+++ b/WebContent/community/notice/detail.html
@@ -76,7 +76,7 @@
                         <h1 class="d-none">공지사항 버튼</h1>
                         <button class="create-btn button-2"><a href="./create.html">등록</a></button>
                         <button class="update-btn button-2"><a href="./update.html">수정</a></button>
-                        <button class="delete-btn button-2"><a href="./list.html">삭제</a></button>
+                        <button class="delete-btn button-2">삭제</button>
                         <button class="list-btn button-2"><a href="./list.html">목록</a></button>
                     </nav>
                 </main>
