--- a/WebContent/myhome/list.html
+++ b/WebContent/myhome/list.html
@@ -72,114 +72,6 @@
                         5. list.js
                         	- 가져온 데이터를 이용해 화면에 출력하는 로직 짜기
                         -->
-                        <!-- <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/puppy1.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">뽀삐와 산책한 날</span>
-                                <div class="keyword">
-                                    <span>#뽀삐</span>
-                                    <span>#산책</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/puppy2.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">꽃밭에서 찰칵!</span>
-                                <div class="keyword">
-                                    <span>#사랑이</span>
-                                    <span>#꽃밭산책</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/cat1.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">코코의 새로운 모자 :)</span>
-                                <div class="keyword">
-                                    <span>#코코</span>
-                                    <span>#토끼모자</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/puppy1.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">뽀삐와 산책한 날</span>
-                                <div class="keyword">
-                                    <span>#뽀삐</span>
-                                    <span>#산책</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/puppy2.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">꽃밭에서 찰칵!</span>
-                                <div class="keyword">
-                                    <span>#사랑이</span>
-                                    <span>#꽃밭산책</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/cat1.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">코코의 새로운 모자 :)</span>
-                                <div class="keyword">
-                                    <span>#코코</span>
-                                    <span>#토끼모자</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/puppy1.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">뽀삐와 산책한 날</span>
-                                <div class="keyword">
-                                    <span>#뽀삐</span>
-                                    <span>#산책</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/puppy2.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">꽃밭에서 찰칵!</span>
-                                <div class="keyword">
-                                    <span>#사랑이</span>
-                                    <span>#꽃밭산책</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="img-area">
-                                <img class="img-pet" src="../images/cat1.jpg">
-                            </div>
-                            <div class="text-area">
-                                <span class="diary-content">코코의 새로운 모자 :)</span>
-                                <div class="keyword">
-                                    <span>#코코</span>
-                                    <span>#토끼모자</span>
-                                </div>
-                            </div>
-                        </div> -->
                     </div>
                     <nav class="pager">
                         <h1 class="d-none">현재 페이지 정보</h1>
@@ -200,7 +92,7 @@
         <footer id="footer"></footer>
         
         <section class="detail-section d-none">
-            <div class="img-area">
+            <!-- <div class="img-area">
                 <img class="img-pet" src="../images/puppy1.jpg">
             </div>
             <div>
@@ -227,9 +119,9 @@
                     </section>
                     <hr>
                 </section>
-            </div>
-            <div>
-	            <a class="modal-close" href=""><img class="close-btn" src="../images/close-button.png" alt=""></a>
+            </div> -->
+            <div> 
+	            <div class="modal-close"><img class="close-btn" src="../images/close-button.png" alt=""></div>
 	        </div>
         </section>
         
