--- a/WebContent/myhome/list.html
+++ b/WebContent/myhome/list.html
@@ -92,36 +92,8 @@
         <footer id="footer"></footer>
         
         <section class="detail-section d-none">
-            <!-- <div class="img-area">
-                <img class="img-pet" src="../images/puppy1.jpg">
-            </div>
-            <div>
-                <section class="member-info">
-                    <h1 class="d-none">회원 정보</h1>
-                    <div class="img-member"></div>
-                    <span class="id">id1</span>
-                </section>
-                <section>
-                    <h1 class="d-none">일기 내용</h1>
-                    <hr>
-                    <div class="text-area">
-                        <div class="diary-content">뽀삐와 산책한 날<br>오늘따라 더 신난 뽀삐</div>
-                        <div class="keyword">
-                            <span>#뽀삐</span>
-                            <span>#산책</span>
-                        </div>
-                    </div>
-                    <div class="upload-date">2021-04-11</div>
-                    <section class="button-menu">
-                        <h1 class="d-none">버튼</h1>
-                        <button class="btn"><a href="edit.html">수정</a></button>
-                        <button class="btn delete-btn">삭제</button>
-                    </section>
-                    <hr>
-                </section>
-            </div> -->
-            <div> 
-	            <div class="modal-close"><img class="close-btn" src="../images/close-button.png" alt=""></div>
+	        <div class="modal-close">
+	        	<img class="close-btn" src="../images/close-button.png" alt="">
 	        </div>
         </section>
         
