--- a/WebContent/community/notice/list.html
+++ b/WebContent/community/notice/list.html
@@ -52,15 +52,13 @@
                     <h1>공지사항</h1>
                     <section class="select-box">
                         <select name="sort" id="select-main-sorting">
-                            <option selected value="latest">최신글부터</option>
-                            <option value="oldest">예전글부터</option>
-                            <option value="highest">높은조회수</option>
-                            <option value="lowest">낮은조회수</option>
+                            <option selected value="desc">최신글부터</option>
+                            <option value="asc">예전글부터</option>
                         </select>
-                        <select name="view" id="select-main-viewing">
-                            <option value="five-line">5줄</option>
-                            <option selected value="ten-line">10줄</option>
-                            <option value="fifteen-line">15줄</option>
+                        <select name="size" id="select-main-sizing">
+                            <option value="5">5줄</option>
+                            <option selected value="10">10줄</option>
+                            <option value="15">15줄</option>
                         </select>
                     </section>
                     
