--- a/WebContent/myhome/list.html
+++ b/WebContent/myhome/list.html
@@ -56,7 +56,7 @@
             
                         <section class="diary-upload-btn">
                             <h1 class="d-none">일기 등록</h1>
-                            <a href="upload.html"><button class="font">일기 쓰기</button></a>
+                            <a href="reg.html"><button class="font">일기 쓰기</button></a>
                         </section>
                     </section>
                     <div class="diary-list">
