--- a/WebContent/myhome/list.html
+++ b/WebContent/myhome/list.html
@@ -106,7 +106,7 @@
                 <section class="modal-button-menu">
                     <h1 class="d-none">모달창 버튼</h1>
                     <button class="modal-btn modal-close">취소</button>
-                    <button class="modal-btn">확인</button>
+                    <button class="modal-btn delete">확인</button>
                 </section>
                 <div>
                     <a class="modal-close" href="#"><img class="close-btn" src="../images/close-button.png" alt=""></a>
