--- a/WebContent/myhome/reg.html
+++ b/WebContent/myhome/reg.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="reg.css" type="text/css" rel="stylesheet">
-    <script src="reg.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
@@ -49,7 +48,7 @@
 	                                <h1>이미지 등록</h1>
 	                                <span class="required">*</span>
 	                                <div class="img-pet">
-	                                    <button class="img-upload-btn">이미지 업로드</button>
+	                                    <div class="img-upload-btn center">이미지 업로드</div>
 	                                </div>
 	                            </section>
 	                            <section>
