--- a/WebContent/myhome/list.html
+++ b/WebContent/myhome/list.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="list.css" type="text/css" rel="stylesheet">
     <script src="list.js"></script>
+    <script src="comment.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
