--- a/WebContent/community/notice/create.html
+++ b/WebContent/community/notice/create.html
@@ -54,7 +54,7 @@
                         <input name="title" class="notice-title-create" type="text" placeholder="제목을 입력하세요.">
                         <textarea name="content" id="notice-article-create" cols="110" rows="10"></textarea>
                         <button class="file-select button-5">파일 선택</button>
-                        <input class="d-none" type="file" accept="image/*"/>
+                        <input class="d-none" type="file" name="file">
 	                    <button class="button-5" type="submit">등록 완료</button>
                     </form>
                 </main>
