--- a/WebContent/community/notice/list.html
+++ b/WebContent/community/notice/list.html
@@ -104,7 +104,7 @@
                                 <legend class="d-none">공지사항 검색</legend>
                                 <select name="field" id="select-notice-search">
                                     <option selected value="title">제목</option>
-                                    <option value="content">제목+내용</option>
+                                    <option value="content">내용</option>
                                 <input type="text" name="query" value="">
                                 <input type="submit" value="">
                             </fieldset>
