Add 파일 업로드 기능

--- a/WebContent/myhome/reg.html
+++ b/WebContent/myhome/reg.html
@@ -59,7 +59,7 @@
 	                        </section>
 	                        <section class="write-keyword">
 	                            <h1>키워드 입력</h1>
-	                            <input class="keyword" type="text" name="keyword" placeholder="#">
+	                            <input class="keyword font" type="text" name="keyword" placeholder="예) #뽀삐#산책">
 	                        </section>
 	                        <hr class="line">
 	                        <section class="button-menu">
