mypet exception html

--- a/WebContent/pet-management/mypet/exception.html
+++ b/WebContent/pet-management/mypet/exception.html
@@ -48,6 +48,7 @@
                 <main id="main">
                     <h1 class="d-none">오류 페이지</h1>
                     <div>
+                    	<img src ="../../images/bg-questionmark.png">
                     	죄송합니다.<br>
                     	문제가 발생했습니다.<br>
                     	다시 시도해주세요.<br>
