--- a/WebContent/community/notice/detail.html
+++ b/WebContent/community/notice/detail.html
@@ -20,7 +20,7 @@
                         <h1 class="d-none">메인메뉴</h1>
                         <ul>
                             <li><a href="../../myhome/list.html">우리집</a></li>
-                            <li><a href="../../friends/list.html">이웃집</a></li>
+                            <li><a href="../../friends/list">이웃집</a></li>
                             <li><a href="../../pet-management/mypet/list.html">내동물관리</a></li>
                             <li><a href="./list.html">커뮤니티</a></li>
                         </ul>
@@ -43,7 +43,7 @@
                         <h1 class="d-none">커뮤니티</h1>
                         <ul>
                             <li><a class="current-page" href="./list.html">공지사항</a></li>                     
-                            <li><a href="../knowhow/list.html">노하우</a></li>
+                            <li><a href="../knowhow/list">노하우</a></li>
                         </ul>
                     </nav>
                 </aside>
@@ -66,6 +66,7 @@
 	                        많이 찾아와주세요.<br>
 	                        감사합니다! -->
 	                    </div>
+	                    <a download class="thumbnail"><img></a>
                     </article>
                     <nav class="article-pager">
                         <h1 class="d-none">상세 페이저</h1>
