Update 경로 재설정

--- a/WebContent/myhome/list.html
+++ b/WebContent/myhome/list.html
@@ -20,13 +20,13 @@
                         <img src="../images/logo.png">
                     </a>
                     <nav class="main-menu">   
-                            <h1 class="d-none">메인메뉴</h1>
-                            <ul>
-                                <li><a href="list.html">우리집</a></li>
-                                <li><a href="../friends/list.html">이웃집</a></li>
-                                <li><a href="../pet-management/mypet/list.html">내 동물 관리</a></li>
-                                <li><a href="../community/notice/list.html">커뮤니티</a></li>
-                            </ul>
+	                    <h1 class="d-none">메인메뉴</h1>
+	                    <ul>
+	                        <li><a href="list.html">우리집</a></li>
+	                        <li><a href="../friends/list">이웃집</a></li>
+	                        <li><a href="../pet-management/mypet/list">내 동물 관리</a></li>
+	                        <li><a href="../community/notice/list.html">커뮤니티</a></li>
+	                    </ul>
                     </nav>
                 </div>
                 <nav class="member-menu">
