--- a/WebContent/community/notice/update.html
+++ b/WebContent/community/notice/update.html
@@ -21,7 +21,7 @@
                         <ul>
                             <li><a href="../../myhome/list.html">우리집</a></li>
                             <li><a href="../../friends/list">이웃집</a></li>
-                            <li><a href="../../pet-management/mypet/list.html">내동물관리</a></li>
+                            <li><a href="../../pet-management/mypet/list">내동물관리</a></li>
                             <li><a href="./list.html">커뮤니티</a></li>
                         </ul>
                     </nav>
